<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.example.android.sunshineserver.ServerControl"
    android:id="@+id/constraintLayout">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/webServerStatus"
        tools:text="Web Server Active"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="16dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <RadioButton
        android:text="@string/radio_return_static"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:id="@+id/radioReturnStatic"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintLeft_toLeftOf="@+id/radioReturnError"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintRight_toLeftOf="@+id/radioReturnRandom"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioReturnRandom"
        tools:layout_constraintBaseline_creator="1" />

    <RadioButton
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:id="@+id/radioReturnRandom"
        android:text="@string/radio_return_random"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintLeft_toLeftOf="@+id/error"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/webServerStatus"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/error"
        tools:layout_constraintRight_creator="1" />

    <RadioButton
        android:text="@string/radio_return_error"
        android:layout_width="176dp"
        android:layout_height="35dp"
        android:id="@+id/radioReturnError"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/radioReturnStatic"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/error"
        android:text="404"
        android:enabled="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintDimensionRatio="25"
        app:layout_constraintLeft_toRightOf="@+id/radioReturnError"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintRight_toRightOf="@+id/clearLogButton"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioReturnError"
        tools:layout_constraintBaseline_creator="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stopServerButton"
        android:visibility="visible"
        android:text="@string/btn_stop_server"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearLogButton"
        android:visibility="visible"
        android:text="@string/btn_clear_log"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="1" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/logViewScroller"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioReturnError"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintBottom_toTopOf="@+id/stopServerButton"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="129dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Connection at 2016/05/26 07:13PM"
            android:id="@+id/logView" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>
